# Gevondr---DigiGO-hackathon-2026

./: .gitignore  README.md  docker-compose.yml
be/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml  test_iaa_flow.py
be/dev/: test_infisical.py
be/scripts/: probe_h2m_capability.py  seed_local_demo.py
be/src/: app.py  monitoring.py  settings.py
be/src/api/: deps.py
be/src/api/middleware/: identity.py
be/src/api/routers/: __init__.py  audit.py  auth.py  catalogs.py  consumer.py  project_chat.py  projects.py
be/src/api/schemas/: project_chat.py
be/src/database/: bootstrap.py  exceptions.py  models.py  session_manager.py
be/src/database/keydb/: arq_config.py  keydb_config.py  keydb_manager.py
be/src/database/postgres/: document_index_models.py  py_models.py
be/src/services/: audit_service.py  auth_tokens.py  catalogs.py  indexing_service.py  job_queue.py  llm_runtime.py  participant_registry.py  search_service.py  staging_service.py  storage.py
be/src/services/document_database/: accepted_types.py  async_processer.py
be/src/services/dsgo/: auth.py  config.py  registry.py
be/src/services/key_vault/: __init__.py  client.py  config.py
be/src/services/llm_services/: jinja_helper.py
be/src/services/project_chat/: access.py  agent.py  (+5 more)
be/src/worker/: tasks.py
be/tests/: test_api_smoke.py  test_audit_api.py  test_audit_service.py  test_index_pipeline.py  test_indexing_service.py  test_project_chat_access.py  test_project_chat_api.py  test_project_chat_retrieval.py  test_project_chat_streaming.py  test_session_manager.py
(+104 files in other folders)
