[project]
name = "digigo-hackathon"
version = "0.1.0"
description = "Vondr x DigiGO hackathon - AI-verrijkte DSGO data-uitwisseling"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "arq>=0.26.3",
    "attrs>=26.1.0",
    "chonkie>=1.6.1",
    "cryptography>=46.0.5",
    "fastapi>=0.116.1",
    "google-genai>=1.39.1",
    "html-to-markdown>=2.30.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "markitdown[pdf,xls,xlsx,xlxs]>=0.1.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg[binary]>=3.2.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "python-pptx>=1.0.2",
    "rasterio>=1.5.0",
    "redis>=5.2.1,<6",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.48",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.35.0",
    "weaviate-client>=4.20.4",
    "xlrd>=2.0.2",
    "pyxlsb>=1.0.10",
    "pydantic-ai>=1.73.0",
]
